fixed contrasting colors

--- a/css/style.css
+++ b/css/style.css
@@ -11122,7 +11122,7 @@ h5,
 }
 @media (max-width: 991.98px) {
   .owl-carousel.home-slider .slider-item .slider-text p {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.9);
     font-size: 23px;
   }
 }
